--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -6,9 +6,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@drawable/ic_home_bg"
         tools:ignore="MissingConstraints">
-
 
 
         <com.recycling.toolsapp.view.CircleProgressView
@@ -19,9 +18,9 @@
             app:backgroundColor="#E0E0E0"
             app:cpv_maxProgress="100"
             app:cpv_progress="50"
-            app:cpv_progressColor="#1365FF"
-            app:cpv_strokeWidth="10dp"
-            app:cpv_textColor="#333333"
+            app:cpv_progressColor="#FFFFFF"
+            app:cpv_strokeWidth="@dimen/dp_5"
+            app:cpv_textColor="#FFFFFF"
             app:cpv_textSize="24sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -31,127 +30,147 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_20"
             android:gravity="center"
             android:text="可回收物仓门已打开 \n请尽快投递"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="@dimen/sp_20"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/gline"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cpv_view" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.35" />
+            app:layout_constraintGuide_percent="0.32" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_interval"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_1"
-            android:background="@color/black"
+            android:layout_height="@dimen/dp_0_1"
+            android:background="@color/white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gline" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_weight"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_info"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_10"
-            android:layout_marginEnd="@dimen/dp_10"
-            android:text="本次投递重量"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp_14"
-            android:textStyle="bold"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gline" />
+            android:layout_margin="@dimen/dp_5"
+            android:background="@drawable/shape_info_delivery_bg"
+            android:padding="@dimen/dp_10"
+            app:layout_constraintTop_toBottomOf="@+id/tv_interval">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_10"
-            android:layout_marginTop="@dimen/dp_10"
-            android:text="本次预计获得金额"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp_14"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gline" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_weight_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_10"
-            android:layout_marginTop="@dimen/dp_5"
-            android:text="0.00公斤"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp_12"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_weight" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_weight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="本次投递重量"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp_14"
+                android:textStyle="bold"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/gline" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_money_value"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/dp_5"
-            android:layout_marginEnd="@dimen/dp_10"
-            android:text="0.00元"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp_12"
-            android:textStyle="bold"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_money" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_money"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="本次预计获得金额"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp_14"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/gline" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_weight_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0.00公斤"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp_12"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_weight" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_money_value"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:text="0.00元"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp_12"
+                android:textStyle="bold"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_money" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_camera_photo"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingTop="@dimen/dp_5"
-            android:paddingRight="@dimen/dp_10"
-            android:paddingBottom="@dimen/dp_5"
+            android:layout_margin="@dimen/dp_5"
+            android:background="@drawable/shape_info_delivery_bg"
             app:layout_constraintBottom_toTopOf="@+id/tv_operation"
-            app:layout_constraintTop_toBottomOf="@+id/tv_weight_value">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/aiv_show_photo"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_pai"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/cl_info">
 
 
-            <com.youth.banner.Banner xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/banner"
+
+            <HorizontalScrollView
+                android:id="@+id/hsv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_height="0dp"
+                android:fillViewport="true">
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/ll_photo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+            </HorizontalScrollView>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_operation"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_32"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_marginRight="@dimen/dp_10"
             android:layout_marginBottom="@dimen/dp_5"
-            android:background="@drawable/btn_open_close_bg"
+            android:background="@drawable/shape_btn_delivery_bg"
             android:gravity="center"
-            android:text="正在打开仓门"
+            android:hint="正在打开仓门"
+            android:padding="@dimen/dp_2"
             android:textColor="@color/white"
-            android:textSize="@dimen/sp_8"
+            android:textColorHint="@color/white"
+            android:textSize="@dimen/sp_16"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
+
+
+        <FrameLayout
+            android:id="@+id/frame1"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_200"
+            android:visibility="gone" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
