--- a/app/src/main/res/drawable/cabinet_layer_launcher_logo.xml
+++ b/app/src/main/res/drawable/cabinet_layer_launcher_logo.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_start" />
-    <item
-        android:width="@dimen/dp_1"
-        android:height="@dimen/dp_1"
-        android:drawable="@drawable/ic_start"
-        android:gravity="center" />
+    <item android:drawable="@drawable/ic_start2" />
+
 </layer-list>
