--- a/app/src/main/res/layout/activity_init_fractory.xml
+++ b/app/src/main/res/layout/activity_init_fractory.xml
@@ -6,147 +6,167 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bg_title_bg"
+        android:background="@drawable/ic_home_bg"
         tools:ignore="MissingConstraints">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_top"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/dp_8"
+            android:background="@drawable/ic_bug_bg"
+            tools:ignore="MissingConstraints">
 
 
-            <!--输入sn码-->
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/aciv_ni_hao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_23"
+                android:layout_marginTop="@dimen/dp_20"
+                android:src="@drawable/ic_mobile_ninhao"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/aciv_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_29"
+                android:src="@drawable/ic_mobile_mogo"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl_input_sn"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_42"
-                android:layout_margin="@dimen/dp_16"
-                android:background="@drawable/bg_sn_input">
-
-                <com.google.android.material.card.MaterialCardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:cardCornerRadius="@dimen/dp_12"
-                    app:cardElevation="@dimen/dp_2"
-                    app:layout_constraintTop_toBottomOf="@+id/cl_input_sn">
-
-                    <androidx.appcompat.widget.AppCompatEditText
-                        android:id="@+id/acet_sn"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@null"
-                        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
-                        android:focusableInTouchMode="true"
-                        android:gravity="center|left"
-                        android:hint="请输入唯一的sn编码，用于产品初始化"
-                        android:imeOptions="actionDone"
-                        android:inputType="text|textNoSuggestions"
-                        android:maxLength="31"
-                        android:maxLines="1"
-                        android:paddingLeft="@dimen/dp_10"
-                        android:textColor="@color/black"
-                        android:textColorHint="@color/black"
-                        android:textSize="@dimen/sp_8" />
-
-                </com.google.android.material.card.MaterialCardView>
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <!--初始化配置类型-->
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/mc_select_type"
+                android:id="@+id/cl_content2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp_16"
-                app:cardCornerRadius="@dimen/dp_12"
-                app:cardElevation="@dimen/dp_2"
-                app:layout_constraintTop_toBottomOf="@+id/cl_input_sn">
+                android:layout_marginLeft="@dimen/dp_8"
+                android:layout_marginTop="@dimen/dp_14"
+                android:layout_marginRight="@dimen/dp_8"
+                android:background="@drawable/ic_bg_02"
+                app:layout_constraintTop_toBottomOf="@+id/aciv_logo"
+                tools:ignore="MissingConstraints">
 
-                <LinearLayout
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/acet_sn"
                     android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_32"
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:layout_marginTop="@dimen/dp_16"
+                    android:layout_marginRight="@dimen/dp_12"
+                    android:background="@drawable/shape_input_delivery_bg"
+                    android:gravity="center"
+                    android:hint="请输入出厂配置SN码，(输入后请对准sn是否准确)"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="@dimen/sp_12"
+                    android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/actv_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/dp_32"
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:layout_marginTop="@dimen/dp_16"
+                    android:background="@drawable/shape_input_delivery_bg"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/dp_10"
+                    android:paddingRight="@dimen/dp_10"
+                    android:text="请选择出厂回收箱类型"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_12"
+                    android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/acet_sn" />
+
+                <RadioGroup
+                    android:id="@+id/rg_lattice"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="@dimen/dp_16">
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:layout_marginTop="@dimen/dp_15"
+                    android:layout_marginBottom="@dimen/dp_10"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/actv_type">
 
-                    <TextView
+                    <com.google.android.material.radiobutton.MaterialRadioButton
+                        android:id="@+id/mrb_lattice1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingBottom="12dp"
-                        android:text="格口类型初始化"
-                        android:textColor="?attr/colorOnSurface"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <RadioGroup
-                        android:id="@+id/rgBuckleType"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <com.google.android.material.radiobutton.MaterialRadioButton
-                            android:id="@+id/rbSingle"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:checked="true"
-                            android:text="单口" />
+                        android:layout_marginRight="@dimen/dp_23"
+                        android:layout_weight="1"
+                        android:button="@null"
+                        android:checked="true"
+                        android:drawableLeft="@drawable/radio_selector"
+                        android:drawablePadding="@dimen/dp_5"
+                        android:text="单格口"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_13" />
 
 
-                        <com.google.android.material.radiobutton.MaterialRadioButton
-                            android:id="@+id/rbDouble"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="双口" />
-
-                        <com.google.android.material.radiobutton.MaterialRadioButton
-                            android:id="@+id/rbParentChild"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="子母口" />
-                    </RadioGroup>
-
-                </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
-
-            <!--初始化按钮-->
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl_init"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_32"
-                android:layout_margin="@dimen/dp_16"
-                android:background="@drawable/bg_sn_input"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/mc_select_type">
-
-                <com.google.android.material.card.MaterialCardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:cardCornerRadius="@dimen/dp_12"
-                    app:cardElevation="@dimen/dp_2">
-
-
-                    <androidx.appcompat.widget.AppCompatTextView
+                    <com.google.android.material.radiobutton.MaterialRadioButton
+                        android:id="@+id/mrb_lattice2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:padding="@dimen/dp_3"
-                        android:text="初始化配置"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/sp_10" />
+                        android:layout_marginRight="@dimen/dp_23"
+                        android:layout_weight="1"
+                        android:button="@null"
+                        android:drawableLeft="@drawable/radio_selector"
+                        android:drawablePadding="@dimen/dp_5"
+                        android:text="双格口"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_13" />
 
-                </com.google.android.material.card.MaterialCardView>
+                    <com.google.android.material.radiobutton.MaterialRadioButton
+                        android:id="@+id/mrb_lattice3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:button="@null"
+                        android:drawableLeft="@drawable/radio_selector"
+                        android:drawablePadding="@dimen/dp_5"
+                        android:text="子母格口"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_13" />
+
+                </RadioGroup>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/actv_init"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_16"
+                android:layout_marginBottom="@dimen/dp_16"
+                android:background="@drawable/shape_input_delivery_bg"
+                android:gravity="center"
+                android:padding="@dimen/dp_5"
+                android:text="确认配置初始化"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp_12"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@+id/cl_content2" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/aciv_init"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="matrix"
+            android:src="@drawable/ic_start2"
+            android:visibility="gone" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
