--- a/app/src/main/res/layout/fragment_tou_double.xml
+++ b/app/src/main/res/layout/fragment_tou_double.xml
@@ -53,12 +53,12 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp_20"
                     android:textStyle="bold"
-                    app:layout_constraintBaseline_toBaselineOf="@id/tv_value2"
+                    app:layout_constraintBaseline_toBaselineOf="@id/tv_double_price"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toLeftOf="@+id/tv_value2" />
+                    app:layout_constraintRight_toLeftOf="@+id/tv_double_price" />
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tv_value2"
+                    android:id="@+id/tv_double_price"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_marginLeft="@dimen/dp_5"
@@ -79,8 +79,8 @@
                     android:text="元"
                     android:textColor="@color/yellow"
                     android:textSize="@dimen/sp_25"
-                    app:layout_constraintBaseline_toBaselineOf="@id/tv_value2"
-                    app:layout_constraintLeft_toRightOf="@+id/tv_value2"
+                    app:layout_constraintBaseline_toBaselineOf="@id/tv_double_price"
+                    app:layout_constraintLeft_toRightOf="@+id/tv_double_price"
                     app:layout_constraintRight_toLeftOf="@+id/tv_value4" />
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -93,8 +93,8 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp_20"
                     android:textStyle="bold"
-                    app:layout_constraintBaseline_toBaselineOf="@id/tv_value2"
-                    app:layout_constraintBottom_toBottomOf="@+id/tv_value2"
+                    app:layout_constraintBaseline_toBaselineOf="@id/tv_double_price"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_double_price"
                     app:layout_constraintLeft_toRightOf="@+id/tv_value3" />
 
 
@@ -138,7 +138,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tv_left_zl_value"
+                        android:id="@+id/tv_left_cur_weight"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/dp_10"
@@ -153,7 +153,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/tv_left_tile" />
 
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tv_left_ketou_value"
+                        android:id="@+id/tv_left_votable_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/dp_10"
@@ -164,15 +164,15 @@
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_left_zl_value" />
+                        app:layout_constraintTop_toBottomOf="@+id/tv_left_cur_weight" />
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/aciv_gz1"
+                        android:id="@+id/aciv_status_left"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="fitXY"
                         android:src="@drawable/ic_my1"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
@@ -208,7 +208,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tv_right_zl_value"
+                        android:id="@+id/tv_right_cur_weight"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/dp_10"
@@ -221,7 +221,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/tv_right_tile" />
 
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tv_right_ketou_value"
+                        android:id="@+id/tv_right_votable_value"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/dp_10"
@@ -233,15 +233,15 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_right_zl_value" />
+                        app:layout_constraintTop_toBottomOf="@+id/tv_right_cur_weight" />
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/aciv_gz2"
+                        android:id="@+id/aciv_status_right"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="fitXY"
                         android:src="@drawable/ic_gz2"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
@@ -292,7 +292,7 @@
                 android:id="@+id/aciv_code"
                 android:layout_width="@dimen/dp_130"
                 android:layout_height="@dimen/dp_130"
-                android:src="@drawable/ic_erweima"
+                tools:src="@drawable/ic_erweima"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent" />
