--- a/app/src/main/res/layout/fragment_camera2.xml
+++ b/app/src/main/res/layout/fragment_camera2.xml
@@ -9,25 +9,44 @@
         android:background="@color/white"
         tools:ignore="MissingConstraints">
 
-
-        <androidx.camera.view.PreviewView
-            android:id="@+id/previewView1"
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:background="@color/red"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/previewView2"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.camera.view.PreviewView
-            android:id="@+id/previewView2"
-            android:layout_width="match_parent"
-            android:background="@color/yellow"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/previewView1" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@color/purple_200">
+
+                <TextureView
+                    android:id="@+id/texture_in"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </FrameLayout>
+
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@color/red">
+
+                <TextureView
+                    android:id="@+id/texture_out"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </FrameLayout>
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/atv_picture1"
+            android:id="@+id/atv_picture_in"
             android:layout_width="0dp"
             android:layout_height="@dimen/dp_120"
             android:gravity="center"
@@ -35,21 +54,21 @@
             android:textColor="@color/white"
             android:textSize="@dimen/sp_12"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/atv_recording1" />
+            app:layout_constraintRight_toLeftOf="@+id/atv_recording_in" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/atv_recording1"
+            android:id="@+id/atv_recording_in"
             android:layout_width="0dp"
             android:layout_height="@dimen/dp_120"
             android:gravity="center"
             android:text="录像"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_12"
-            app:layout_constraintLeft_toRightOf="@+id/atv_picture1"
-            app:layout_constraintRight_toLeftOf="@+id/atv_stop_recording1" />
+            app:layout_constraintLeft_toRightOf="@+id/atv_picture_in"
+            app:layout_constraintRight_toLeftOf="@+id/atv_stop_recording_in" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/atv_stop_recording1"
+            android:id="@+id/atv_stop_recording_in"
             android:layout_width="0dp"
             android:layout_height="@dimen/dp_120"
             android:gravity="center"
@@ -61,7 +80,7 @@
 
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/atv_picture2"
+            android:id="@+id/atv_picture_out"
             android:layout_width="0dp"
             android:layout_height="@dimen/dp_120"
             android:gravity="center"
@@ -69,32 +88,33 @@
             android:textColor="@color/white"
             android:textSize="@dimen/sp_12"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/atv_recording2"
-            app:layout_constraintTop_toBottomOf="@+id/atv_picture1" />
+            app:layout_constraintRight_toLeftOf="@+id/atv_recording_out"
+            app:layout_constraintTop_toBottomOf="@+id/atv_picture_in" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/atv_recording2"
+            android:id="@+id/atv_recording_out"
             android:layout_width="0dp"
             android:layout_height="@dimen/dp_120"
             android:gravity="center"
             android:text="录像"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_12"
-            app:layout_constraintLeft_toRightOf="@+id/atv_picture2"
-            app:layout_constraintRight_toLeftOf="@+id/atv_stop_recording2"
-            app:layout_constraintTop_toBottomOf="@+id/atv_picture1" />
+            app:layout_constraintLeft_toRightOf="@+id/atv_picture_out"
+            app:layout_constraintRight_toLeftOf="@+id/atv_stop_recording_out"
+            app:layout_constraintTop_toBottomOf="@+id/atv_recording_in" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/atv_stop_recording2"
+            android:id="@+id/atv_stop_recording_out"
             android:layout_width="0dp"
             android:layout_height="@dimen/dp_120"
             android:gravity="center"
-
             android:text="停止录像"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_12"
-            app:layout_constraintLeft_toRightOf="@+id/atv_recording2"
+            app:layout_constraintLeft_toRightOf="@+id/atv_recording_out"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/atv_picture1" />
+            app:layout_constraintTop_toBottomOf="@+id/atv_stop_recording_in" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
