--- a/app/src/main/res/layout/fragment_camerax2.xml
+++ b/app/src/main/res/layout/fragment_camerax2.xml
@@ -9,56 +9,11 @@
         android:background="@color/white"
         tools:ignore="MissingConstraints">
 
-
-        <androidx.camera.view.PreviewView
-            android:id="@+id/previewView1"
-            android:layout_width="match_parent"
-            android:background="@color/red"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/previewView2"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <androidx.camera.view.PreviewView
             android:id="@+id/previewView2"
             android:layout_width="match_parent"
-            android:background="@color/yellow"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/previewView1" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/atv_picture1"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp_120"
-            android:gravity="center"
-            android:text="拍摄"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sp_12"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/atv_recording1" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/atv_recording1"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp_120"
-            android:gravity="center"
-            android:text="录像"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sp_12"
-            app:layout_constraintLeft_toRightOf="@+id/atv_picture1"
-            app:layout_constraintRight_toLeftOf="@+id/atv_stop_recording1" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/atv_stop_recording1"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp_120"
-            android:gravity="center"
-            android:text="停止录像"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sp_12"
-            app:layout_constraintLeft_toRightOf="@+id/atv_recording1"
-            app:layout_constraintRight_toRightOf="parent" />
-
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/atv_picture2"
@@ -96,5 +51,6 @@
             app:layout_constraintLeft_toRightOf="@+id/atv_recording2"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/atv_picture1" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
