--- a/app/src/main/res/layout/fragment_mobile.xml
+++ b/app/src/main/res/layout/fragment_mobile.xml
@@ -294,10 +294,10 @@
             android:layout_marginTop="@dimen/dp_7"
             android:background="@drawable/shape_lattice_select_bg"
             android:visibility="gone"
-            tools:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_weight="2"
-            tools:ignore="MissingConstraints">
+            tools:ignore="MissingConstraints"
+            tools:visibility="visible">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/aciv_close"
@@ -305,12 +305,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/dp_15"
                 android:src="@drawable/ic_close_box"
-                app:layout_constraintBottom_toBottomOf="@+id/acet_cast_title"
+                app:layout_constraintBottom_toBottomOf="@+id/actv_cast_title"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/acet_cast_title" />
+                app:layout_constraintTop_toTopOf="@+id/actv_cast_title" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/acet_cast_title"
+                android:id="@+id/actv_cast_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_10"
@@ -318,7 +318,7 @@
                 android:hint="请选择投递门投口"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="@dimen/sp_16"
+                android:textSize="@dimen/sp_18"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -328,19 +328,21 @@
                 android:id="@+id/cl_cast_left"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_16"
-                android:layout_marginTop="@dimen/dp_5"
-                android:layout_marginRight="@dimen/dp_5"
+                android:layout_marginStart="@dimen/dp_16"
+                android:layout_marginTop="@dimen/dp_12"
+                android:layout_marginEnd="@dimen/dp_5"
                 android:layout_marginBottom="@dimen/dp_15"
                 android:background="@drawable/shape_btn_delivery_bg"
+                android:clickable="true"
+                android:focusable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@+id/cl_cast_right"
-                app:layout_constraintTop_toBottomOf="@+id/acet_cast_title"
+                app:layout_constraintTop_toBottomOf="@+id/actv_cast_title"
                 tools:ignore="MissingConstraints">
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/acet_cast_left"
+                    android:id="@+id/actv_cast_left"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_5"
@@ -354,28 +356,29 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/acet_cast_left_logo"
+                    android:id="@+id/aciv_cast_left_logo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:src="@drawable/ic_mobile_mogo"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/acet_cast_left" />
+                    app:layout_constraintTop_toBottomOf="@+id/actv_cast_left" />
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/acet_cast_left_value"
+                    android:id="@+id/actv_cast_left_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/dp_10"
                     android:gravity="center"
-                    android:hint="容量已满50%\n（1.02kg）"
+                    android:hint="容量已满0%\n（0.00kg）"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:textSize="@dimen/sp_14"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/acet_cast_left_logo" />
+                    app:layout_constraintTop_toBottomOf="@+id/aciv_cast_left_logo" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -386,19 +389,20 @@
                 android:id="@+id/cl_cast_right"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_5"
-                android:layout_marginTop="@dimen/dp_5"
-                android:layout_marginRight="@dimen/dp_16"
+                android:layout_marginStart="@dimen/dp_5"
+                android:layout_marginTop="@dimen/dp_12"                android:layout_marginEnd="@dimen/dp_16"
                 android:layout_marginBottom="@dimen/dp_15"
                 android:background="@drawable/shape_btn_delivery_bg"
+                android:clickable="true"
+                android:focusable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/cl_cast_left"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/acet_cast_title"
+                app:layout_constraintTop_toBottomOf="@+id/actv_cast_title"
                 tools:ignore="MissingConstraints">
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/acet_cast_right"
+                    android:id="@+id/actv_cast_right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_5"
@@ -412,28 +416,29 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/acet_cast_right_logo"
+                    android:id="@+id/aciv_cast_right_logo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:src="@drawable/ic_mobile_mogo"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/acet_cast_right" />
+                    app:layout_constraintTop_toBottomOf="@+id/actv_cast_right" />
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/acet_cast_right_value"
+                    android:id="@+id/actv_cast_right_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/dp_10"
                     android:gravity="center"
-                    android:hint="容量已满50%\n（1.02kg）"
+                    android:hint="容量已满0%\n（0.00kg）"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:textSize="@dimen/sp_14"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/acet_cast_right_logo" />
+                    app:layout_constraintTop_toBottomOf="@+id/aciv_cast_right_logo" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
