--- a/app/src/main/res/layout/fragment_camera2.xml
+++ b/app/src/main/res/layout/fragment_camera2.xml
@@ -10,15 +10,16 @@
         tools:ignore="MissingConstraints">
 
         <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/ll_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/purple_200">
 
@@ -30,8 +31,8 @@
 
 
             <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/red">
 
@@ -75,7 +76,7 @@
             android:text="停止录像"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_12"
-            app:layout_constraintLeft_toRightOf="@+id/atv_recording1"
+            app:layout_constraintLeft_toRightOf="@+id/atv_recording_in"
             app:layout_constraintRight_toRightOf="parent" />
 
 
